# PictureProcessing

./: CMakeLists.txt  README.md
client/: CMakeLists.txt  client  client.cpp  worker.cc  worker.cpp  worker.h
client/handlers/: CMakeLists.txt  request_handler.cc  request_handler.h  response_dispatcher.cc  response_dispatcher.h
mtci/: CMakeLists.txt  main.cpp  mtci_main
mtci/lib/: CMakeLists.txt  mtci_image.cc
mtci/util/: CMakeLists.txt  mtci_threads.cc  mtci_threads.h  mtci_transform.cc  mtci_transform.h
root/: CMakeLists.txt  server  server.cc  server.cpp  server.h
root/handlers/: CMakeLists.txt  command_dispatcher.cc  command_dispatcher.h  response_handler.cc  response_handler.h  worker_map.cc  worker_map.h
root/manager/: CMakeLists.txt  manager.cc  manager.h  worker_map.cc  worker_map.h
src/: CMakeLists.txt  Image.h  main.cpp  mtci
src/img/: image.cpp
src/lib/: mtci_image.cc  mtci_image.h  mtci_kernels.h  mtci_threads.cc  mtci_threads.h
src/mtci/: mtci_image.cc  mtci_image.h
src/util/: mtci_kernel.cc  mtci_kernel.h  mtci_threads.cc  mtci_threads.h  mtci_transform.cc  mtci_transform.h
utils/: CMakeLists.txt  auto_handler.cc  auto_handler.h  miscellaneous.cc  miscellaneous.h  pusher_handler.h  requester.cc  requester.h  responser.h  socket_pattern.h
zmq/: CMakeLists.txt  command_dispatcher.cc  command_dispatcher.h  helpers.cc  helpers.h
